<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/vertical_margin"
    android:layout_marginBottom="@dimen/small_space"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/name"
        android:text="@string/default_name"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



    <TextView
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/small_text_size"
        android:text="@string/default_email"
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/flag"
        android:layout_marginTop="@dimen/vertical_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bio"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_flag"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/vertical_margin"
        android:id="@+id/country"
        android:textSize="16sp"
        android:text="@string/default_country"
        android:layout_marginLeft="@dimen/small_space"
        android:layout_marginStart="@dimen/small_space"
        app:layout_constraintTop_toBottomOf="@id/bio"
        app:layout_constraintStart_toEndOf="@id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="@dimen/small_space"
        android:id="@+id/car_info"
        android:textSize="16sp"
        android:text="@string/default_color"
        android:layout_marginLeft="@dimen/small_space"
        android:layout_marginStart="@dimen/small_space"
        app:layout_constraintTop_toBottomOf="@id/flag"
        app:layout_constraintStart_toEndOf="@id/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/car"
        app:layout_constraintTop_toBottomOf="@id/flag"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_space"
        android:src="@drawable/ic_car"
        android:layout_width="24dp"
        android:layout_height="24dp"/>

    <TextView
        android:layout_marginTop="@dimen/small_space"
        android:id="@+id/job"
        android:text="@string/default_gender"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:text="@string/default_bio"
        android:textColor="#A0A0A0"
        android:layout_height="wrap_content"
        />






</androidx.constraintlayout.widget.ConstraintLayout>